--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # VITE_BACKEND_URL='http://localhost:8181'
-VITE_BACKEND_URL='https://pharma1.shop'
+# VITE_BACKEND_URL='https://pharma1.shop'
+VITE_BACKEND_URL='https://api.pharma1.shop'
